--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="button_clear">c</string>
     <string name="button_divide">/</string>
     <string name="button_equal">=</string>
+
+    <dimen name="button_size">24sp</dimen>
 </resources>
